--- a/javascript/index.html
+++ b/javascript/index.html
@@ -15,6 +15,13 @@
     
 <!--    <script src="js/zmienne.js"></script>-->
     
-    <script src="js/fukncje.js"></script>
+<!--    <script src="js/fukncje.js"></script>-->
+
+<!--<script src="js/variable-scope.js"></script>-->
+
+<!--<script src="js/data-types.js"></script>-->
+
+<script src="js/arrays.js"></script>
+
 </body>
 </html>    
