--- a/javascript/index.html
+++ b/javascript/index.html
@@ -21,7 +21,9 @@
 
 <!--<script src="js/data-types.js"></script>-->
 
-<script src="js/arrays.js"></script>
+<!--<script src="js/arrays.js"></script>-->
+
+<script src="js/obiekty.js"></script>
 
 </body>
 </html>    
