--- a/javascript/index.html
+++ b/javascript/index.html
@@ -29,7 +29,8 @@
 <!--    <script src="js/object-math.js"></script>-->
 <!--    <script src="js/operators.js"></script>-->
    
-   <script src="js/conditions.js"></script>
+<!--   <script src="js/conditions.js"></script>-->
+  <script src="js/loops.js"></script>
    
     
 
