--- a/javascript/index.html
+++ b/javascript/index.html
@@ -30,9 +30,12 @@
 <!--    <script src="js/operators.js"></script>-->
    
 <!--   <script src="js/conditions.js"></script>-->
-  <script src="js/loops.js"></script>
+<!--  <script src="js/loops.js"></script>-->
    
+   
+<!--   <script src="js/12-json.js"></script>-->
     
+<script src="js/warsztaty-js.js"></script>
 
 </body>
 </html>    
