--- a/javascript/index.html
+++ b/javascript/index.html
@@ -33,9 +33,9 @@
 <!--  <script src="js/loops.js"></script>-->
    
    
-<!--   <script src="js/12-json.js"></script>-->
+   <script src="js/12-json.js"></script>
     
-<script src="js/warsztaty-js.js"></script>
+<!--<script src="js/warsztaty-js.js"></script>-->
 
 </body>
 </html>    
